--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 relm4 = { version = "0.6.0", features = ["libadwaita", "gnome_44", "macros"] }
 webkit6 = "0.1.0"
+webkit6-sys = "0.1.0"
 url = "2.4.0"
 pango = "0.17.4"
 relm4-components = "0.6.0"
