--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ url = "2.4.1"
 relm4-components = "0.6.2"
 relm4-macros = "0.6.2"
 relm4-icons = {version="0.6.0", features=["plus","minus","up","down","top","rich-text","edit","share","cat-sleeping", "call-missed", "left", "right", "cross", "refresh","multitasking-windows"]}
+directories = "5.0.1"
