--- a/data/com.github.kdwk.Spidey.desktop.in.in
+++ b/data/com.github.kdwk.Spidey.desktop.in.in
@@ -4,7 +4,7 @@ Comment=A distraction-free, laser-focused web experience
 Type=Application
 Exec=spidey
 Terminal=false
-Categories=GNOME;GTK;Networking
+Categories=GNOME;GTK;Network
 # Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
 Keywords=Gnome;GTK;Spidey;web;browser;
 # Translators: Do NOT translate or transliterate this text (this is an icon file name)!
