--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,11 @@ lto = true
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
-relm4 = { version = "0.6.2", features = ["libadwaita", "gnome_44", "macros"] }
-webkit6 = "0.1.0"
-webkit6-sys = "0.1.0"
+relm4 = { version = "0.7.0-beta.1", features = ["libadwaita", "gnome_45", "macros"] }
+webkit6 = "0.2.0"
+webkit6-sys = "0.2.0"
 url = "2.4.1"
-relm4-components = "0.6.2"
-relm4-macros = "0.6.2"
-relm4-icons = {version="0.6.0", features=["plus","minus","up","down","top","rich-text","edit","share","cat-sleeping", "call-missed", "left", "right", "cross", "refresh","multitasking-windows"]}
+relm4-components = "0.7.0-beta.1"
+relm4-macros = "0.7.0-beta.1"
+relm4-icons = {version="0.7.0-alpha.2", features=["plus","minus","up","down","top","rich-text","edit","share","cat-sleeping", "call-missed", "left", "right", "cross", "refresh","multitasking-windows"]}
 directories = "5.0.1"
