--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,5 @@ webkit6-sys = "0.2.0"
 url = "2.4.1"
 relm4-components = "0.7.0-beta.1"
 relm4-macros = "0.7.0-beta.1"
-relm4-icons = {version="0.7.0-alpha.2", features=["plus","minus","up","down","top","rich-text","edit","share","cat-sleeping", "call-missed", "left", "right", "cross", "refresh","multitasking-windows"]}
+relm4-icons = {version="0.7.0-alpha.2", features=["plus", "left", "right", "cross", "refresh","multitasking-windows", "about"]}
 directories = "5.0.1"
