--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ relm4-components = "0.7.0-beta.1"
 relm4-macros = "0.7.0-beta.1"
 relm4-icons = {version="0.7.0-alpha.2", features=["plus", "left", "right", "cross", "refresh","multitasking-windows", "about"]}
 directories = "5.0.1"
+curl = "0.4.44"
