--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ webkit6-sys = "0.2.0"
 url = "2.4.1"
 relm4-components = "0.7.0-beta.1"
 relm4-macros = "0.7.0-beta.1"
-relm4-icons = {version="0.7.0-alpha.2", features=["plus", "left", "right", "cross", "refresh","multitasking-windows", "about"]}
+relm4-icons = {version="0.7.0-alpha.2", features=["plus", "left", "right", "cross", "refresh","multitasking-windows", "about", "screenshooter"]}
 directories = "5.0.1"
 curl = "0.4.44"
 chrono = {version="0.4.31", features = ["clock"]}
