--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ relm4-components = "0.7.0-beta.1"
 relm4-macros = "0.7.0-beta.1"
 relm4-icons = {version="0.7.0-alpha.2", features=["plus", "left", "right", "cross", "refresh","multitasking-windows", "about", "screenshooter"]}
 directories = "5.0.1"
-curl = "0.4.44"
 chrono = {version="0.4.31", features = ["clock"]}
 crossbeam = "0.8.2"
 tokio = {version="1.33.0", features=["time"]}
+reqwest = {version="0.11.22", features = ["blocking"]}
