--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ chrono = {version="0.4.34", features = ["clock"]}
 tokio = {version="1.35.0", features=["time"]}
 reqwest = {version="0.11.24", features = ["blocking"]}
 ashpd = "0.7.0"
+open = "5.1.1"
