--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ tokio = {version="1.35.0", features=["time"]}
 reqwest = {version="0.11.24", features = ["blocking"]}
 ashpd = "0.7.0"
 open = "5.1.1"
+extend = "1.2.0"
