--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,17 +12,17 @@ lto = true
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
-webkit6 = "0.2.0"
-webkit6-sys = "0.2.0"
+webkit6 = "0.3.0"
+webkit6-sys = "0.3.0"
 url = "2.5.0"
-relm4 = { version = "0.7.0-beta.2", features = ["libadwaita", "gnome_45", "macros"] }
-relm4-components = "0.7.0-beta.2"
-relm4-macros = "0.7.0-beta.2"
-relm4-icons = {version="0.7.0-alpha.2", features=["plus", "left", "right", "cross", "refresh","multitasking-windows", "about", "screenshooter", "move-to-window", "menu"]}
+relm4 = { version = "0.8.1", features = ["libadwaita", "gnome_45", "macros"] }
+relm4-components = "0.8.1"
+relm4-macros = "0.8.1"
+relm4-icons = "0.8.2"
 directories = "5.0.1"
 chrono = {version="0.4.34", features = ["clock"]}
 tokio = {version="1.35.0", features=["time"]}
 reqwest = {version="0.11.24", features = ["blocking"]}
-ashpd = "0.7.0"
+ashpd = "0.8.0"
 open = "5.1.1"
 extend = "1.2.0"
