--- a/icons.toml
+++ b/icons.toml
@@ -1,3 +1,3 @@
 app_id = "com.github.kdwk.Spidey"
 
-icons = ["plus", "left", "right", "cross", "refresh","multitasking-windows", "about", "screenshooter", "move-to-window", "menu", "arrow3-right", "copy", "padlock2", "padlock2-open", "arrows-pointing-outward", "arrows-pointing-inward"]
+icons = ["plus", "left", "right", "cross", "refresh","multitasking-windows", "about", "screenshooter", "move-to-window", "menu", "arrow3-right", "copy", "padlock2", "padlock2-open", "arrows-pointing-outward", "arrows-pointing-inward", "pin"]
