--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,7 @@ jobs:
       with:
         bundle: spidey.flatpak
         manifest-path: build-aux/com.github.kdwk.Spidey.Devel.json
+        repository-name: flathub-beta
         run-tests: true
         cache-key: flatpak-builder-${{ github.sha }}
         arch: ${{ matrix.arch }}
